# minimal-ct

./: .gitmodules  LICENSE  README.md
modules/ctutils/: CMakeLists.txt  ctutilsmodule.cpp  ctutilsmodule.h  ctutilsmoduledefine.h  depends.cmake  readme.md
modules/ctutils/ext/: CMakeLists.txt  libigl_patch  libigl_patch.diff.1
modules/ctutils/processors/: volumetoct.cpp  volumetoct.h
modules/ctvisualizationgl/: CMakeLists.txt  ctvisualizationglmodule.cpp  ctvisualizationglmodule.h  ctvisualizationglmoduledefine.h  depends.cmake  readme.md
modules/ctvisualizationgl/data/: contour-tree-boron.inv
modules/ctvisualizationgl/processors/: plotcontourtree.cpp  plotcontourtree.h
modules/mesherutils/: CMakeLists.txt  mesherutilsmodule.cpp  mesherutilsmodule.h  mesherutilsmoduledefine.h  readme.md
modules/mesherutils/ext/: CMakeLists.txt
modules/mesherutils/ext/qtet/: quartet.cpp  quartet.h
modules/segmentangling/: CMakeLists.txt  depends.cmake  segmentanglingmodule.cpp
modules/segmentangling/processors/: contourfilter.cpp  contourfilter.h  datapreprocessor.cpp  datapreprocessor.h  loadcontourtree.cpp  loadcontourtree.h  segmentationidraycaster.cpp  straightener.cpp  straightener.h  tetmesher.cpp  tetmesher.h  topoppparameterer.h  volumecollectiongenerator.cpp  volumeexportgenerator.cpp
modules/segmentangling/workspace/: application_first_data.inv  application_second_data.inv  inviwo-topo-test.inv
modules/segmentangling/workspace/2018/: initial.inv
modules/segmentangling/workspace/inviwo-topo-test-data/: boron-subsample-2.part.raw  boron-subsample-2.raw
